# hermes-a2a-v1

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/plans/: 2026-05-24-a2a-gateway-plan.md  2026-05-25-next-development-plan.md
docs/specs/: 2026-05-24-a2a-gateway-design.md
docs/superpowers/plans/: 2026-05-25-phase-4-openclaw-interop-plan.md  (+2 more)
scripts/: a2a_notify.py  a2a_ping.py  generate_test_certs.sh
src/hermes_a2a/: __init__.py  __main__.py  a2a_client.py  a2a_handler.py  admin_api.py  agent_card.py  audit_logger.py  auth.py  config.py  exceptions.py  handler.py  hermes_client.py  message_parser.py  models.py  orchestrator.py  peer_manager.py  push_notifier.py  rate_limiter.py  result_aggregator.py  server.py  session_store.py  skill_router.py  task_state_machine.py  task_store.py  tls_config.py  ws_broadcaster.py
tests/: conftest.py  test_a2a_client.py  test_a2a_client_enhanced.py  test_admin_api.py  test_agent_card.py  test_audit_logger.py  test_auth.py  test_config.py  test_dashboard.py  test_handler.py  test_health_metrics.py  test_hermes_client.py  test_hermes_client_retry.py  test_message_parser.py  test_orchestrator.py  test_peer_manager.py  test_push_notifications.py  test_rate_limiter.py  test_rest_transport.py  test_result_aggregator.py  test_server.py  test_session_store.py  test_skill_router.py  test_streaming_enhanced.py  test_task_state_machine.py  test_task_store.py  test_tls_config.py  test_v03_compat.py  test_ws_broadcaster.py
(+2 files in other folders)
